feat: 增加workflow日志
